@@ -43,6 +43,10 @@ func ParseTime(timespec string) (Time, error) {
 	return Time(t), err
 }
 
+func (t Time) String() string {
+	return time.Time(t).Format(TsLayout)
+}
+
 // MustParseTime is a convenience equivalent of the ParseTime function
 // that panics in case of errors.
 func MustParseTime(timespec string) Time {
@@ -50,5 +54,6 @@ func MustParseTime(timespec string) Time {
 	if err != nil {
 		panic(err)
 	}
+
 	return ts
 }
