@@ -95,6 +95,7 @@ https://github.com/elastic/beats/compare/v5.3.1...v5.4.0[View commits]
 - Improve error message when downloading the dashboards fails. {pull}3805[3805]
 - Fix potential Elasticsearch output URL parsing error if protocol scheme is missing. {pull}3671[3671]
 - Downgrade Elasticsearch per batch item failure log to debug level. {issue}3953[3953]
+- Make `@timestamp` accessible from format strings. {pull}3721[3721]
 
 *Filebeat*
 
